<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/course_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/sport_hall_image"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:filterTouchesWhenObscured="false"
                android:scaleType="centerCrop"
                android:src="@drawable/yoga"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/course_subscribe_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/transparent_blue"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:text="@string/subscribe"
                android:theme="@style/SportooTheme.Button"
                app:layout_constraintBottom_toBottomOf="@id/sport_hall_image" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/course_infos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_horizontal_padding"
            android:paddingEnd="@dimen/activity_horizontal_padding"
            app:layout_constraintTop_toBottomOf="@id/course_header">

            <LinearLayout
                android:id="@+id/course_basic_infos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/course_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/course_name" />

                <TextView
                    android:id="@+id/course_date_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/course_date" />

                <TextView
                    android:id="@+id/course_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/course_level" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/course_extra_infos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:orientation="vertical"
                android:visibility="gone">

                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/course_room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/course_room" />

                <TextView
                    android:id="@+id/course_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/course_address" />

                <TextView
                    android:id="@+id/course_capacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/course_capacity" />
            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <Button
                android:id="@+id/course_extend_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="-" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>