<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.register.RegisterFragment">

    <data>

        <variable
            name="viewModel"
            type="com.worna.sportoo.ui.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#DCE3E4"
            android:padding="@dimen/activity_horizontal_padding">

            <ImageView
                android:id="@+id/register_logo"
                android:layout_width="136dp"
                android:layout_height="136dp"
                android:src="@drawable/sportoo_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/register_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_message"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/text_size_headline_4"
                app:layout_constraintTop_toBottomOf="@id/register_logo" />
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/register_title" />

            <ScrollView
                android:id="@+id/register_info_scroll"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:verticalScrollbarPosition="right"
                app:layout_constraintBottom_toTopOf="@id/register_button"
                app:layout_constraintTop_toBottomOf="@id/progressBar"
                tools:layout_editor_absoluteX="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/register_language_text_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_language">

                        <AutoCompleteTextView
                            android:id="@+id/register_language_auto_complete_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/register_first_name_text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_first_name_text_input_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/account_first_name" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/register_last_name_text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_last_name_text_input_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/account_last_name" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/register_phone_number_text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_phone_number_text_input_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/account_phone"
                            android:inputType="phone" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/register_email_text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_email_text_input_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/account_email"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/register_password_text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_password_text_input_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/account_password"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/register_confirm_password_text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_confirm_password_text_input_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/account_confirm_password"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/register_birth_date_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_birth_date_text_input_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/account_birthdate"
                            android:inputType="date" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/register_gender_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account_gender"
                        android:textSize="@dimen/text_size_subtitle_1" />

                    <RadioGroup
                        android:id="@+id/register_gender"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/register_gender_man"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/account_gender_man" />

                        <RadioButton
                            android:id="@+id/register_gender_woman"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/account_gender_woman" />

                        <RadioButton
                            android:id="@+id/register_gender_other"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/account_gender_other" />

                    </RadioGroup>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/register_address_text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_address_text_input_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/account_address" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/register_zip_code_text_input_layout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="2dp"
                            app:endIconMode="clear_text"
                            app:errorEnabled="true"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toLeftOf="@id/register_city_text_input_layout"
                            app:layout_constraintTop_toTopOf="parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/register_zip_code_text_input_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/account_zip_code"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/register_city_text_input_layout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            app:endIconMode="clear_text"
                            app:errorEnabled="true"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toRightOf="@id/register_zip_code_text_input_layout"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/register_city_text_input_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/account_city" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/register_country_text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_country_text_input_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/account_country" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>
            </ScrollView>

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/register"
                android:theme="@style/SportooTheme.Button"
                app:layout_constraintBottom_toTopOf="@id/already_member"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_info_scroll" />

            <TextView
                android:id="@+id/already_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_member"
                android:textAlignment="center"
                android:textColor="@color/link"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_button" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/error_layout"
            layout="@layout/network_error_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>